Fix issue #15 - Navigation - arrows alignment

--- a/static/sass/_global-settings.scss
+++ b/static/sass/_global-settings.scss
@@ -3,24 +3,3 @@ $asset-server: "https://assets.ubuntu.com/v1/";
 $site-max-width:    auto;
 
 $color-brand:       #e95420;
-
-/// Ubuntu orange
-$ubuntu-orange:     #e95420;
-
-/// cool grey
-$cool-grey:         #333;
-
-/// warm grey
-$warm-grey:         #888;
-
-/// mid grey
-$mid-grey:          #cdcdcd;
-
-/// light mid grey
-$light-mid-grey:    #d4d4d4;
-
-/// light grey
-$light-grey:        #f7f7f7;
-
-/// white
-$white:             #fff;
